# docker_postgres

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
